--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<html>
+    <head>
+        <title>
+            Floating Particles
+        </title>
+    </head>
 <body>
     <div class="par">
         <div class="ch">
@@ -44,3 +50,4 @@
         </div>
     </div>
 </body>
+</html>
