--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>
             Floating Particles
         </title>
+        <link rel="stylesheet" href="style.css">
     </head>
 <body>
     <div class="par">
