--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
             Floating Particles
         </title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="icon/x-image" href="https://scx2.b-cdn.net/gfx/news/hires/2022/big-bang.jpg">
     </head>
 <body>
     <div class="par">
